--- a/petclinic-fullstack/app/src/main/resources/templates/owners/findOwners.html
+++ b/petclinic-fullstack/app/src/main/resources/templates/owners/findOwners.html
@@ -3,13 +3,13 @@
 
 <body>
 
-  <h2>Find Owners</h2>
+  <h2>飼い主を見つける</h2>
 
   <form th:object="${owner}" th:action="@{/owners}" method="get"
     class="form-horizontal" id="search-owner-form">
     <div class="form-group">
       <div class="control-group" id="lastNameGroup">
-        <label class="col-sm-2 control-label">Last name </label>
+        <label class="col-sm-2 control-label">姓 </label>
         <div class="col-sm-10">
           <input class="form-control" th:field="*{lastName}" size="30"
             maxlength="80" /> <span class="help-inline"><div
@@ -21,12 +21,11 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Find
-          Owner</button>
+        <button type="submit" class="btn btn-primary">飼い主を見つける</button>
       </div>
     </div>
 
-    <a class="btn btn-primary" th:href="@{/owners/new}">Add Owner</a>
+    <a class="btn btn-primary" th:href="@{/owners/new}">飼い主を追加する</a>
 
   </form>
 
