htmx で動的な機能を追加してみる

--- a/petclinic-fullstack/app/src/main/resources/templates/fragments/layout.html
+++ b/petclinic-fullstack/app/src/main/resources/templates/fragments/layout.html
@@ -7,6 +7,16 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta
+    name="htmx-config"
+    content='{
+        "responseHandling":[
+            {"code":"200", "swap": true},
+            {"code":"422", "swap": true, "error":true},
+            {"code":"...", "swap": false, "error":true}
+        ]
+    }'
+  />
 
   <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.png}">
 
@@ -88,7 +98,7 @@
   </div>
 
   <script th:src="@{/webjars/bootstrap/5.3.3/dist/js/bootstrap.bundle.min.js}"></script>
-
+  <script th:src="@{/webjars/htmx.org/2.0.4/dist/htmx.min.js}" defer></script>
 </body>
 
 </html>
