--- a/petclinic-fullstack/app/src/main/resources/templates/owners/ownersList.html
+++ b/petclinic-fullstack/app/src/main/resources/templates/owners/ownersList.html
@@ -6,6 +6,17 @@
 
 <h2>Owners</h2>
 
+<div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10">
+    <button data-bs-toggle="modal" data-bs-target="#modal" class="btn btn-primary"
+            th:hx-get="@{/owners/find}"
+            hx-target="#modal-target"
+            hx-select="#search-owner-form-fields">
+      飼い主を見つける
+    </button>
+  </div>
+</div>
+
 <table id="owners" class="table table-striped">
   <thead>
   <tr>
@@ -56,6 +67,32 @@
          class="fa fa-fast-forward"></a>
       <span th:unless="${currentPage < totalPages}" title="Last" class="fa fa-step-forward"></span>
     </span>
+</div>
+<div id="modal" class="modal fade">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">飼い主を見つける</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="modal-close-button"></button>
+      </div>
+      <div class="modal-body">
+        <form th:object="${owner}"
+              th:hx-post="@{/owners}"
+              hx-select="#search-owner-form-fields"
+              hx-target="#search-owner-form-fields"
+              hx-select-oob="#owners"
+              hx-on::after-request="if(event.detail.successful) document.getElementById('modal-close-button').click()"
+              class="form-horizontal" id="search-owner-form">
+          <div id="modal-target"></div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-primary">飼い主を見つける</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
